# litesvm

./: Cargo.toml
crates/litesvm/: Cargo.toml
crates/litesvm/benches/: banks_client_comparison.rs
crates/litesvm/src/: lib.rs  message_processor.rs  precompiles.rs
crates/litesvm/src/spl/: mod.rs
crates/loader/tests/: loader.rs
crates/node-litesvm/src/: feature_set.rs
crates/token/: Cargo.toml
crates/token/src/: approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  create_account.rs  create_mint.rs  create_native_mint.rs  lib.rs  mint_to.rs  mint_to_checked.rs  transfer.rs  transfer_checked.rs
crates/token/tests/: native_mint.rs
