[package]
name = "litesvm-token"
description = "Helpers for working with spl-token and LiteSVM"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
litesvm.workspace = true
smallvec.workspace = true
solana-sdk.workspace = true
spl-associated-token-account-client = { workspace = true }
spl-token = { workspace = true, optional = true, features = ["no-entrypoint"] }
jpl-token-2022 = { workspace = true, features = [
    "no-entrypoint",
] }
ethnum = "1.5.0"

[lints]
workspace = true

[[test]]
name = "native_mint"
required-features = ["token-2022"]
